# skill-evaluator

./: .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml  run_evaluate.sh  run_scenarios.sh
scenarios/auth-bypass-py/: ground_truth.json  setup.sh
scenarios/clean-api-go/: ground_truth.json  setup.sh
scenarios/clean-feature-go/: ground_truth.json  setup.sh
scenarios/clean-refactor-py/: ground_truth.json  setup.sh
scenarios/clean-tests-ts/: ground_truth.json  setup.sh
scenarios/command-injection-py/: ground_truth.json  setup.sh
scenarios/connection-pool-py/: ground_truth.json  setup.sh
scenarios/deadlock-java/: ground_truth.json  setup.sh
scenarios/deserialization-java/: ground_truth.json  setup.sh
scenarios/goroutine-leak-go/: ground_truth.json  setup.sh
scenarios/hardcoded-secrets-js/: ground_truth.json  setup.sh
scenarios/integer-overflow-c/: ground_truth.json  setup.sh
scenarios/mixed-issues-py/: ground_truth.json  setup.sh
scenarios/multi-issue-c/: ground_truth.json  setup.sh
scenarios/multi-issue-rust/: ground_truth.json  setup.sh
scenarios/null-safety-rust/: ground_truth.json  setup.sh
scenarios/off-by-one-c/: ground_truth.json  setup.sh
scenarios/path-traversal-py/: ground_truth.json  setup.sh
scenarios/prototype-pollution-js/: setup.sh  (+1 more)
src/: display.py  evaluate.py  evaluator.py  report.py  runner.py
tests/: test_auth.py  test_cli.py  test_container.py  test_display.py  test_evaluate.py  test_export.py  test_memory.py  test_parallel.py  test_prompt.py  test_report.py  test_scenarios.py  test_skills.py
(+12 files in other folders)
